--- a/index.html
+++ b/index.html
@@ -96,22 +96,15 @@
   </section>
 
 <!-- Google Analytics -->
-<!--   Replace UA-XXXXXX-XX with your site's ID and uncomment to enable.
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  <script>
-
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-XXXXXX-XX']);
-    _gaq.push(['_trackPageview']);
-
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-
-  </script>
--->
+  ga('create', 'UA-66450209-1', 'auto');
+  ga('send', 'pageview');
+</script>
 
   <!-- Fitting text to the body device-agnostically with FitText.js -->
   <script src="_/js/fittext.js"></script>
