Toggle function correct place + ESC-key to close
Moved the toggle function to the right place: the “About” text link in
the main nav. + added the close with ESC-key functionality.

--- a/index.html
+++ b/index.html
@@ -64,12 +64,10 @@
   <header id="header">
     
     <div class="svg-container"> 
-      <a href="#" class="toggle-about">
       <object height="100%" width="100%" id="avatar" type="image/svg+xml" data="_/img/avatar.svg">
         <!-- fallback image in this div by CSS -->
         <div></div>
       </object>
-      </a>
     </div>
 
   <!-- Header text and nav links section -->
@@ -80,7 +78,7 @@
       <h3 id="h3-nav">
         <ul class="main-nav">
           <li><a href="http://cargocollective.com/hannu">Work</a></li>|
-          <li><a href="http://cargocollective.com/hannu/About">About</a></li>|
+          <li><a href="#" class="toggle-about">About</a></li>|
           <li><a href="mailto:hannu@hannuaarniala.com">Contact</a></li>
         </ul>
       </h3>
