Added inner-wrapper to make the transform full-width
Moved the max-width:600, etc. declarations to the inner wrapper with
the header & nav, thus complicating the DOM a bit. Changed the
direction of the off-canvas transform. Removed some deprecated
commenting.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 <!-- wrappers for the off-canvas "About"-page transform-->
 <div class="site-wrapper">
 <div class="site-canvas">
+<div class="site-canvas-inner">
 
   <header id="header">
     
@@ -101,14 +102,17 @@
     </ul>
   </section>
 
-  <!-- hidden "About" page -->
+<!-- .site-canvas-inner end -->
+</div>
+
+  <!-- hidden "About" page content-->
   <section class="about-section">
     <p>TEST</p>
   </section>
 
-<!-- .site-canvas -->
+<!-- .site-canvas end -->
 </div>
-<!-- .site-wrapper> -->
+<!-- .site-wrapper end -->
 </div>
 
 <!-- Google Analytics -->
@@ -130,7 +134,7 @@
   fitText(document.getElementById('h3-nav'), 0.84)
 </script>
 
-<!-- off-canvas about page functionality -->
+<!-- off-canvas 'About'-page functionality -->
 <script src="_/js/off-canvas-effects.js"></script>
 
 </body>
