About-page content (test)
About-page content with RWD-image test

--- a/index.html
+++ b/index.html
@@ -107,7 +107,18 @@
 
   <!-- hidden "About" page content-->
   <section class="about-section">
+    <img/>
+    <h1>At Your Service,</h1>
     <p>TEST</p>
+    <img sizes="(min-width: 320px) 50vw, 100vw" srcset="Hannu-200.jpg 200w,
+    Apples-400.jpg 400w,
+    Apples-600.jpg 600w,
+    Apples-800.jpg 800w,
+    Apples-1200.jpg 1200w"
+    src="Apple_fallback.jpg" alt="text" />
+
+    <!-- <img src="small.jpg" 
+    srcset="small.jpg [smallwidth]w, large.jpg [largewidth]w" sizes="100vw" alt="Alt Text" /> -->
   </section>
 
 <!-- .site-canvas end -->
