Update about-section off-canvas reveal according to JRW
Update based on @jrw’s feedback. TODO: try to make rwd work w/o media
queries.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <h3 id="h3-nav">
         <ul class="main-nav">
           <li><a href="http://cargocollective.com/hannu">Work</a></li>|
-          <li><a href="#" class="toggle-about">About</a></li>|
+          <li><a href="javascript:void(0)" class="toggle-about">About</a></li>|
           <li><a href="mailto:hannu@hannuaarniala.com">Contact</a></li>
         </ul>
       </h3>
@@ -137,7 +137,7 @@
   ga('send', 'pageview');
 </script>
 
-<!-- Fitting text to the body device-agnostically with FitText.js -->
+<!-- Fitting text to the viewport device-agnostically with FitText.js -->
 <script src="_/js/fittext.js"></script>
 <script type="text/javascript">
   fitText(document.getElementById('h1-name'), 0.545)
