--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
   <!-- Opera Speed Dial icon -->
   <link rel="icon" type"image/png" href="_/img/195x195image.png" />
   
+  <!-- Webfonts from Brick.im -->
+  <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Montserrat:300,500">
+
   <link rel="stylesheet" href="_/css/reset.css" />
   <link rel="stylesheet" href="_/css/style.css" />
 
@@ -109,16 +112,16 @@
   <section class="about-section">
     <img/>
     <h1 id="h1-about">At Your Service,</h1>
-    <p>TEST</p>
     <img sizes="(min-width: 320px) 50vw, 100vw" srcset="Hannu-200.jpg 200w,
     Apples-400.jpg 400w,
     Apples-600.jpg 600w,
     Apples-800.jpg 800w,
     Apples-1200.jpg 1200w"
-    src="Apple_fallback.jpg" alt="text" />
-
-    <!-- <img src="small.jpg" 
+    src="Apple_fallback.jpg" alt="Hannu Aarniala" />
+<!-- <img src="small.jpg" 
     srcset="small.jpg [smallwidth]w, large.jpg [largewidth]w" sizes="100vw" alt="Alt Text" /> -->
+    <p>A graphic design thinker and a problem solver with an extensive experience in print and a passion for great digital products & experiences. I’m a team player who likes to think different and make stuff work with less.</p>
+    <p><a href="http://youtu.be/EZNInn5jFRE">I dance</a> the Lindy Hop, suffer from <a href="https://en.wikipedia.org/wiki/Tsundoku">tsundoku</a>, <a href="https://open.spotify.com/user/harkko/playlist/65ZPgCSYvCme2P54FRj4Ut">DJ</a> occasionally, <a href="http://www.last.fm/user/Harkko">listen to</a> a lot of music and try to be The World's Greatest Dad.</p>
   </section>
 
 <!-- .site-canvas end -->
