Update styling for the about-section, inc. @media-queries. Also: SCSS
Updated styling for the about section including @media-queries for type
styling on the smaller screens. ALSO: removed the vendor prefixes, and
changed to SCSS. Autoprefixer and css-minification through LibSass

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   <meta charset="utf-8">
 
-  <title>Graphic Designer Hannu Aarniala</title>
+  <title>Designer Hannu Aarniala</title>
 
   <meta name="title" content="Graphic Designer Hannu Aarniala" />
   <meta name="description" content="Personal site and the work of a Helsinki based graphic designer Hannu Aarniala"/>
@@ -83,8 +83,8 @@
       <h3 id="h3-nav">
         <ul class="main-nav">
           <li><a href="http://cargocollective.com/hannu">Work</a></li>|
-          <li><a href="javascript:void(0)" class="toggle-about">About</a></li>|
-          <li><a href="mailto:hannu@hannuaarniala.com">Contact</a></li>
+          <li><a href="mailto:hannu@hannuaarniala.com">Contact</a></li>|
+          <li><a href="javascript:void(0)" class="toggle-about">About</a></li>
         </ul>
       </h3>
     </nav>
@@ -108,19 +108,18 @@
 <!-- .site-canvas-inner end -->
 </div>
 
+<!-- toggle to reveal/hide main content -->
+<div class="main-toggle"></div>
+
   <!-- hidden "About" page content-->
   <section class="about-section">
-    <img/>
+    <button id="about-back-btn">&#11013; Back</button>
     <h1 id="h1-about">At Your Service,</h1>
-    <img sizes="(min-width: 320px) 50vw, 100vw" srcset="Hannu-200.jpg 200w,
-    Apples-400.jpg 400w,
-    Apples-600.jpg 600w,
-    Apples-800.jpg 800w,
-    Apples-1200.jpg 1200w"
-    src="Apple_fallback.jpg" alt="Hannu Aarniala" />
+    <img sizes="(min-width: 320px) 50vw, 100vw" srcset="_/img/Hannu-600-retina.jpg 2x"
+         src="_/img/Hannu-600.jpg" width="600" alt="Hannu Aarniala" />
 <!-- <img src="small.jpg" 
     srcset="small.jpg [smallwidth]w, large.jpg [largewidth]w" sizes="100vw" alt="Alt Text" /> -->
-    <p>A graphic design thinker and a problem solver with an extensive experience in print and a passion for great digital products & experiences. I’m a team player who likes to think different and make stuff work with less.</p>
+    <p>A visual design thinker and a problem solver with an extensive experience in print and a passion for great digital products & experiences. I’m a team player who likes to think different and make stuff work with less.</p>
     <p><a href="http://youtu.be/EZNInn5jFRE">I dance</a> the Lindy Hop, suffer from <a href="https://en.wikipedia.org/wiki/Tsundoku">tsundoku</a>, <a href="https://open.spotify.com/user/harkko/playlist/65ZPgCSYvCme2P54FRj4Ut">DJ</a> occasionally, <a href="http://www.last.fm/user/Harkko">listen to</a> a lot of music and try to be The World's Greatest Dad.</p>
   </section>
 
