--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
   <!-- Header text and nav links section -->
     <h1 id="h1-name">Hannu Aarniala</h1>
-    <h2 id="h2-title">graphic designer</h2>
+    <h2 id="h2-title">visual designer</h2>
 
     <nav>
       <h3 id="h3-nav">
@@ -143,7 +143,7 @@
 <script src="_/js/fittext.js"></script>
 <script type="text/javascript">
   fitText(document.getElementById('h1-name'), .545)
-  fitText(document.getElementById('h2-title'), .59)
+  fitText(document.getElementById('h2-title'), .545)
   fitText(document.getElementById('h3-nav'), .84)
   fitText(document.getElementById('h1-about'), .6)
 </script>
