Better wording of my professional history

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <img sizes="(min-width: 320px) 50vw, 100vw" srcset="_/img/Hannu-600-retina.jpg 2x"
          src="_/img/Hannu-600.jpg" width="600" alt="Hannu Aarniala" />
 
-    <p>A visual design thinker and a problem solver with an extensive experience in print and a passion for great digital products & experiences. I’m a team player who likes to think different and make stuff work with less.</p>
+    <p>A visual design thinker and a problem solver with a background in print and a passion for great digital products & experiences. I’m a team player who likes to think different and make stuff work with less.</p>
     <p><a href="http://youtu.be/EZNInn5jFRE">I dance</a> the Lindy Hop, suffer from <a href="https://en.wikipedia.org/wiki/Tsundoku">tsundoku</a>, <a href="https://open.spotify.com/user/harkko/playlist/65ZPgCSYvCme2P54FRj4Ut">DJ</a> occasionally, <a href="http://www.last.fm/user/Harkko">listen to</a> a lot of music and try to be The World's Greatest Dad.</p>
   </aside>
 
