--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <!-- Header text and nav links section -->
     <h1 id="h1-name">Hannu Aarniala</h1>
-    <h2 id="h2-title">visual designer</h2>
+    <h2 id="h2-title">Interaction Designer</h2>
 
     <nav>
       <h3 id="h3-nav">
@@ -133,10 +133,11 @@
 </script>
 
 <!-- Fitting text to the viewport device-agnostically with FitText.js -->
+<!-- Smaller the number here, bigger the text -->
 <script src="_/js/fittext.js"></script>
 <script type="text/javascript">
   fitText(document.getElementById('h1-name'), .545)
-  fitText(document.getElementById('h2-title'), .545)
+  fitText(document.getElementById('h2-title'), .73)
   fitText(document.getElementById('h3-nav'), .84)
   fitText(document.getElementById('h1-about'), .6)
 </script>
