--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
     <img sizes="(min-width: 320px) 50vw, 100vw" srcset="_/img/Hannu-600-retina.jpg 2x"
          src="_/img/Hannu-600.jpg" width="600" alt="Hannu Aarniala" />
 
-    <p>A <strong>visual design thinker</strong> and a <strong>problem solver</strong> with a background in print and a <strong>passion</strong> for great <strong>digital products & experiences</strong>. I’m a team player who likes to think different and make stuff work with less.</p>
-    <p><a href="http://youtu.be/EZNInn5jFRE">I dance</a> the Lindy Hop, suffer from <a href="https://en.wikipedia.org/wiki/Tsundoku">tsundoku</a>, <a href="https://open.spotify.com/user/harkko/playlist/65ZPgCSYvCme2P54FRj4Ut">DJ</a> occasionally, <a href="http://www.last.fm/user/Harkko">listen to</a> a lot of music and try to be The World's Greatest Dad&reg; to my two kids.</p>
+    <p>A <strong>visual design thinker</strong> and a <strong>problem solver</strong> with a background in print and a <strong>passion</strong> for great <strong>digital products & experiences</strong>. I’m a team player who likes to <strong>think different</strong> and <strong>make stuff work</strong> with less.</p>
+    <p><a href="http://youtu.be/EZNInn5jFRE">I dance</a> the Lindy Hop, suffer from <a href="https://en.wikipedia.org/wiki/Tsundoku">tsundoku</a>, <a href="https://open.spotify.com/user/harkko/playlist/65ZPgCSYvCme2P54FRj4Ut">DJ</a> occasionally, <a href="http://www.last.fm/user/Harkko">listen to</a> a lot of music and try to be <em>The World's Greatest Dad&reg;</em> to my two kids.</p>
   </aside>
 
 
